test/libyul/yulSyntaxTests/invalid/label_disallowed.yul
{
    label:
}
// ----
// ParserError 6913: (11-12): Call or assignment expected.
